[project]
name = "volby-check"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "marimo>=0.17.8",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "requests>=2.31.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
]
